--- a/templates/admin/my-dashboard.html.twig
+++ b/templates/admin/my-dashboard.html.twig
@@ -1,7 +1,11 @@
 {% extends '@EasyAdmin/layout.html.twig' %}
 
+{% block title %}
+	Administration
+{% endblock %}
+
 {% block main %}
-    <h1>Bienvenue sur le Dashboard</h1>
+    <h1>Bienvenue sur le Tableau de bord</h1>
     <hr>
     <div class="row">
         <div class="col-md-6">
