Correction du lien de téléchargement du CV

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -108,7 +108,7 @@
 					{% endif %}
 					<br>
 					{% if user.cvFileName != "" %}
-						<a href="documents/{{ user.cvFileName }}" download type="application/pdf" title="Télécharger le CV de {{ user.prenom}} {{ user.nom }}">Télécharger mon CV
+						<a href="uploads/files/{{ user.cvFileName }}" download type="application/pdf" title="Télécharger le CV de {{ user.prenom}} {{ user.nom }}">Télécharger mon CV
 							<span>
 								<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
 									<g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
